finished small world analysis (RQ2) and stable matching (RQ3) analysis

--- a/sr_analysis/SRMatchingAnalysis.ipynb
+++ b/sr_analysis/SRMatchingAnalysis.ipynb
@@ -1701,6 +1701,23 @@
     "            matching_affinity_dict[helper] = 0 # TODO: what should you put for no affinity\n",
     "    \n",
     "    return matching_affinity_dict\n",
+    "\n",
+    "def convert_matching_to_user_pairs(matching, index_user_mapping):\n",
+    "    \"\"\"\n",
+    "    Converts matching list to two lists of firstUserId and secondUserId.\n",
+    "    \n",
+    "    Input:\n",
+    "        matching (list of numbers): list of numbers where index is current user and numbers correspond to index user is matched to.\n",
+    "        index_user_mapping (dict): dict where keys are indicies and values are userIds\n",
+    "    \n",
+    "    Output:\n",
+    "        (list of strings): firstUserId list.\n",
+    "        (list of strings): secondUserId list.\n",
+    "    \"\"\"\n",
+    "    first_user_id_list = [index_user_mapping[str(index)] for index in range(len(matching))]\n",
+    "    second_user_id_list = [index_user_mapping[str(target)] if target != -1 else None for target in matching]\n",
+    "    \n",
+    "    return first_user_id_list, second_user_id_list\n",
     "    \n",
     "\n",
     "# def compute_mwm_stability(mwm_matching, preference_matrix):\n",
